@@ -1,3 +1,13 @@
+2011-03-22  Jay Civelli  <jcivelli@chromium.org>
+
+        Reviewed by David Levin.
+
+        Adding a contains method to Vector.
+        https://bugs.webkit.org/show_bug.cgi?id=55859
+
+        * wtf/Vector.h:
+        (WTF::Vector::contains):
+
 2011-03-22  Gabor Loki  <loki@webkit.org>
 
         Reviewed by Alexey Proskuryakov.
